# ProtoClaw

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: napkin.md  settings.json
docs/superpowers/plans/: 2026-03-27-protoclaw-mvp.md
docs/superpowers/specs/: 2026-03-27-protoclaw-design.md
protoclaw/cli/: main.py
protoclaw/deployer/: docker.py
protoclaw/llm/: parsing.py  provider.py
protoclaw/orchestrator/: graph.py  state.py
protoclaw/orchestrator/nodes/: decompose.py  deploy.py  generate_nanobot.py  generate_openclaw.py  guardrails.py  parse.py  report.py  select.py
protoclaw/templates/nanobot/: .env.j2  config.json.j2
protoclaw/templates/openclaw/: AGENTS.md.j2  SOUL.md.j2  workspace.json.j2
protoclaw/workspace/: manager.py
tests/: conftest.py
tests/integration/: test_canary.py
tests/unit/: test_decompose.py  test_docker.py  test_generate_nanobot.py  test_generate_openclaw.py  test_guardrails.py  test_parse.py  test_provider.py  test_select.py  test_state.py  test_templates.py  test_workspace.py
