[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protoclaw"
version = "0.1.0"
description = "Intelligent agent factory — deploy focused AI agents from a mission string"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "jinja2>=3.1.4",
    "gitpython>=3.1.0",
    "docker>=7.0.0",
    "paramiko>=3.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
protoclaw = "protoclaw.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["protoclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
